src/App.scss
.App {
  &-header {
    margin-top: 30px;
    text-align: center;

    &__bubble {
      transition-property: all !important;
    }
  }

  &-scene {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: -1;

    &.expanded {
      width: 100vw; 
      min-height: 100vh;
    }
  }

  &-contact-form {
    text-align: start;

    & > div {
      margin-bottom: 15px; 
    }
  }
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.u-flex {
  display: flex;

  & > * {
    flex: 1;
  }
}

